Fixed fancyScroll wanting to scroll too much + made .songList able to be 101% high??? dont ask it works

--- a/less/stylesheets/sections/main.less
+++ b/less/stylesheets/sections/main.less
@@ -21,7 +21,7 @@
 }
 
 .songList {
-  max-height: 100%;
+  max-height: 101%;
   overflow-x: hidden;
   width: 100%;
 }
@@ -193,7 +193,7 @@
 
 
 .fancyScroll {
-  overflow-y: scroll;
+  overflow-y: auto;
 
   &::-webkit-scrollbar {
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
